<resources>
    <string name="app_name">RealFoodForAll</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="sign_up_sentence">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_sentence">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="i_am">I am a</string>
    <string name="donor">Donor</string>
    <string name="receiver">Receiver</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_side_drawer_donor">SideDrawerDonorActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="choose_pic_profile">Choose an Image</string>

    <!--    For recyclerView-->
    <string name="show_food_portion">Portion: </string>
    <string name="show_food_location">Location : </string>
    <string name="show_food_name">Food : </string>
    <string name="loading">Loading...</string>
    <string name="search">Search here...</string>

    <!-- New String -->
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile </string>
    <string name="logout_profile">Logout</string>
    <string name="terminate_acc">Terminate Account</string>
    <string name="username_edit">Username: </string>
    <string name="email_edit">Email: </string>
    <string name="edit_pic">Edit Profile Picture</string>
    <string name="confirm_edit">Confirm Edit</string>
    <string name="reset_edit">Reset</string>
    <string name="change_email">Change Email</string>
    <string name="update_email">Update Email</string>
    <string name="enter_pass_again">Enter password to change email</string>

    <!--    For Receiver Food CRUD operation-->
    <string name="want_button">I want it</string>
    <string name="to">To</string>


    <!--For Donor Food CRUD operation-->
    <string name="food_donation_title">Food Donation</string>
    <string name="food_name">Food Name</string>
    <string name="food_portion">Food Portion</string>
    <string name="food_distribution_from_time">From Time</string>
    <string name="food_distribution_to_time">To Time</string>
    <string name="food_distribution_date">Date</string>
    <string name="food_location">Food Location</string>
    <string name="food_image">Food Image</string>
    <string name="choose_image">Choose a Image</string>
    <string name="food_donation_confirm">Confirm</string>
    <string name="title_activity_receiver">ReceiverActivity</string>
    <string name="update_food">Update Food</string>

    <!--    For donor menu-->
    <string name="donor_profile_setting">Profile Setting</string>
    <string name="donor_logout">Logout</string>

    <!--    For Donor PDF report generate-->
    <string name="report_generate_title">Report</string>

    <!-- Calorie Calculator -->
    <string name="calorie_calculator_title">Calorie Calculator</string>
    <string name="age">Age:</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="daily_sentence">Daily Recommended Calorie Intake</string>
    <string name="kj">Kj</string>
    <string name="calculate_button">Calculate Calorie</string>
    <string name="reset_button">Reset</string>


</resources>